k8s/api-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "api-deployment"
  labels:
    component: "api"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: "api"
  template:
    metadata:
      labels:
        component: "api"
    spec:
      containers:
        - name: "api"
          image: "gcr.io/graphql-prisma-boilerplate/api"
          ports:
            - containerPort: 4001
        - name: "cloudsql-proxy"
          image: "gcr.io/cloudsql-docker/gce-proxy"
          command: ["/cloud_sql_proxy",
                "-instances=graphql-prisma-boilerplate:us-central1:db=tcp:5432",
                "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: "cloudsql-secrets-volume"
              mountPath: "/secrets/cloudsql"
              readOnly: true
      volumes:
        - name: "cloudsql-secrets-volume"
          secret:
            secretName: "cloudsql-instance-credentials"
