k8s/ingress-service-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 4001
          - path: /api/?(.*)
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 4001
